--- a/1.html
+++ b/1.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
   <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P56Q3R6WS9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-P56Q3R6WS9');
+    </script>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
   </head>
